# ontorag-demo

./: .env.example  .gitignore  README.ko.md  README.md  mkdocs.yml  ontorag_flow_demo_plan.md  pyproject.toml  requirements-docs.txt
.github/workflows/: docs.yml
docs/: dev_guide.ko.md  dev_guide.md  implementation.ko.md  implementation.md  index.ko.md  index.md  walkthrough.ko.md  walkthrough.md
scripts/: 01_generate_data.py  02_load_ontorag.py  03_run_trace.py  04_run_causal.py  05_run_flow.py  bootstrap.sh
src/ontorag_demo/: __init__.py
src/ontorag_demo/causal/: __init__.py  model.py
src/ontorag_demo/flow/: __init__.py  actions.py  process.yaml  runner.py  writeback.py
src/ontorag_demo/generator/: __init__.py  entities.py  rdf_writer.py  run.py  sampler.py
src/ontorag_demo/schema/: __init__.py  manufacturing.ttl
src/ontorag_demo/verify/: __init__.py  causal.py  trace.py
tests/: test_causal_model.py  test_generator.py  test_verify_causal.py
