[project]
name = "ontorag-demo"
version = "0.1.0"
description = "Synthetic manufacturing traceability + causal-RCA demo built on ontorag + ontorag-flow."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jaeho Kang", email = "greennuri@gmail.com" }]

dependencies = [
    # Submodule-backed editable installs (see [tool.uv.sources]).
    "ontorag[bayes]",
    "ontorag-flow",
    # Demo-only direct dependencies.
    "rdflib>=7.0.0",
    "pgmpy>=0.1.25",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.uv.sources]
ontorag = { path = "vendor/ontorag", editable = true }
ontorag-flow = { path = "vendor/ontorag-flow", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontorag_demo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: pure-Python unit tests with no external services",
    "integration: requires Fuseki running on FUSEKI_URL",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
